# galton-board

./: Cargo.toml  README.md  TODO.md  Trunk.toml  index.html
docs/: CNAME  galton-board-2586a83d02318996.js  galton-board-2586a83d02318996_bg.wasm  galton-board-348e312e1ea7b229.js  galton-board-348e312e1ea7b229_bg.wasm  index.html
src/: main.rs
