[package]
name = "galton-board"
version = "0.1.0"
edition = "2021"

[dependencies]
console_log = "0.2.0"
js-sys = "0.3.60"
log = "0.4.17"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Performance",
    "Window",
] }
