[package]
name = "galton-board"
version = "0.1.0"
edition = "2021"

[dependencies]
console_log = "0.2.0"
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = "0.3.60"
log = "0.4.17"
rand = "0.8.5"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "InputEvent",
    "KeyboardEvent",
    "Performance",
    "Window",
] }
